Basic layout for recipe project added.

--- a/index.html
+++ b/index.html
@@ -3,29 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=>, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet">
-    <title>Rawies Favorite Filipino Recipes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Odin Recipe Project</title>
 </head>
 <body>
-
-    <header>
-        <h1>Rawies Favorite Filipino Food</h1>
-    </header>
-
+    <div class="wrapper">
+       <p>My Favorite Filipino Recipes</p>
+        <ul>
+            <li>Home</li>
+            <li>Recipes
+                <ul>
+                    <li>Spaghetti</li>
+                    <li>Sinigang</li>
+                    <li>Sisig</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <div id="footer">Created by Rawie for the Odin Project.</div>
 </body>
-
-<div class="container">
-
-    <section>
-
-        <div class="body">
-            <p>
-            I love Filipino food. These are my top 3 favorite dishes!
-            </p>
-        </div>
-    </section>
-
-</div>
-
 </html>
