--- a/recipes/sisig.html
+++ b/recipes/sisig.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <title>Odin Recipe Project</title>
 </head>
 <body>
-    <h1>Sisig</h1>
+    <div class="wrapper">
+       <p>My Favorite Filipino Recipes</p>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li>Recipes
+                <ul>
+                    <li><a href="../recipes/spaghetti.html">Spaghetti</a></li>
+                    <li><a href="../recipes/sinigang.html">Sinigang</a></li>
+                    <li><a href="../recipes/sisig.html">Sisig</a></li>
+                </ul>
+            </li>
+            <li><a href="../about.html">About</a></li>
+        </ul>
+    </div>
+    <div id="footer">Created by Rawie for the Odin Project.</div>
 </body>
 </html>
