Finished about me and sinigang pages.

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-       <p>My Favorite Filipino Recipes</p>
+       <p>About Me</p>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li>Recipes
@@ -22,6 +22,9 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </div>
+    <div class="me"><img src="img/me.jpg" width="200" height="250" alt="A picture of me.">Hello! My name is Rawie.
+    <p>I want to learn how to code and someday make it into a career.</p>
+    <p>I hope you'll like the recipes and thank you for visiting my page.</p></div>
     <div id="footer">Created by Rawie for the Odin Project.</div>
 </body>
 </html>
