--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-       <p>My Favorite Filipino Recipes</p>
+       <p>Homepage</p>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li>Recipes
@@ -22,6 +22,7 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </div>
+    <div class="intro"><p>Welcome to my recipe website! Click on recipes above to explore my recipes.</p></div>
     <div id="footer">Created by Rawie for the Odin Project.</div>
 </body>
 </html>
