--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-       <p>My Favorite Filipino Recipes</p>
+       <p>Sinigang</p>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li>Recipes
@@ -23,5 +23,29 @@
         </ul>
     </div>
     <div id="footer">Created by Rawie for the Odin Project.</div>
+    <div class="sinigang"><img src="../img/sinigang.jpg" width="250" height="350" alt="A picture of me."><h1>Pork Sinigang</h1>
+        <p><u>Ingredients:</u><ul>
+            <li>Pork (Any cut you like)</li>
+            <li>Tomatoes</li>
+            <li>Onion</li>
+            <li>Egg Plant</li>
+            <li>Radish</li>
+            <li>1 Packet Sinigang Mix</li>
+            <li>2 Beef Bouillon Cubes</li>
+            <li>Fish Sauce</li>
+            <li>Salt + Pepper To Taste</li>
+        </ul></p>
+        <br>
+        <p><u>Cooking:</u>
+            <li>Step 1 - Saute pork until no longer pink.</li>
+            <li>Step 2 - In a large pot throw in diced tomatoes, sliced onions
+                eggplant, radish and cooked pork.</li>
+            <li>Step 3 - Fill pot with enough water to cover everying with an extra inch of water on top.</li>
+            <li>Step 4 - Heat to a boil, throw in bouillon cubes and sinigang mix. Stir until dissolved.</li>
+            <li>Step 5 - Once it starts to boil, reduce heat to low & let simmer for 30 minutes.</li>
+            <li>Step 6 - Add 2 tablespoons of fish sauce, 1 tsp each of salt and pepper or adjust to your liking.</li>
+            <li>EXTRA - If you want leafy greens now you can throw them in and let steam for 5 minutes.</li>
+            <li>Serve over some rice and enjoy!</li>
+        </p></div>
 </body>
 </html>
