Finished sisig and spaghetti. Website done.

--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -23,7 +23,7 @@
         </ul>
     </div>
     <div id="footer">Created by Rawie for the Odin Project.</div>
-    <div class="sinigang"><img src="../img/sinigang.jpg" width="250" height="350" alt="A picture of me."><h1>Pork Sinigang</h1>
+    <div class="sinigang"><img src="../img/sinigang.jpg" width="250" height="350" alt="A picture of Sinigang."><h1>Pork Sinigang</h1>
         <p><u>Ingredients:</u><ul>
             <li>Pork (Any cut you like)</li>
             <li>Tomatoes</li>
