--- a/recipes/sisig.html
+++ b/recipes/sisig.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-       <p>My Favorite Filipino Recipes</p>
+       <p>Sisig</p>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li>Recipes
@@ -23,5 +23,29 @@
         </ul>
     </div>
     <div id="footer">Created by Rawie for the Odin Project.</div>
+    <div class="sisig"><img src="../img/sisig.jpg" width="250" height="300" alt="A picture of Sisig."><h1>Sisig</h1>
+        <p><u>Ingredients</u><i> I don't really know how to make this.</i></p><ul>
+            <li>Pork Belly</li>
+            <li>Pork Loin</li>
+            <li>Onion</li>
+            <li>Mayonnaise</li>
+            <li>Lemon</li>
+            <li>Soy Sauce</li>
+            <li>Ginger</li>
+            <li>Garlic Powder</li>
+            <li>Salt & Pepper</li>
+        </ul>
+        <br>
+        <div><u>Instructions:</u><ul>
+            <li>Step 1: Add pork to a pot of boiling water. Add Salt & Pepper. Let simmer for 40 minutes.</li>
+            <li>Step 2: Grill pork until fully cooked. </li>
+            <li>Step 3: Brown onions.</li>
+            <li>Step 4: Add ginger to onions.</li>
+            <li>Step 5: Add pork.</li>
+            <li>Step 6: Add spices and soy sauce.</li>
+            <li>Step 7: Add Mayonnaise & Lemon and mix.</li>
+            <li>Step 8: Serve with rice and an optional Red Horse beer.</li>
+        </ul>
+        </div>
 </body>
 </html>
