--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-       <p>My Favorite Filipino Recipes</p>
+       <p>Spaghetti</p>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li>Recipes
@@ -23,5 +23,29 @@
         </ul>
     </div>
     <div id="footer">Created by Rawie for the Odin Project.</div>
+    <div class="spaghetti"><img src="../img/spaghetti.jpg" width="250" height="300" alt="A picture of Spaghetti."><h1>Spaghetti</h1>
+        <u>Ingredients:</u>
+        <ul>
+            <li>Ground pork or beef.</li>
+            <li>Banana Ketchup.</li>
+            <li>Garlic</li>
+            <li>Onions</li>
+            <li>Bell Pepper</li>
+            <li>Noodles</li>
+            <li>Salt & Pepper</li>
+            <li>Extra: Hotdog</li>
+            <li>Extra: Cheddar Cheese</li>
+        </ul>
+        <br>
+        <u>Directions:</u>
+        <ul>
+            <li>Step 1: Brown meat. Add Salt & Pepper. Set aside.</li>
+            <li>Step 2: Saute chopped bell pepper, garlic and onions.</li>
+            <li>Step 3: Boil noodles until soft. (Not al dente)</li>
+            <li>Step 4: Add ground meat back in and the optional sliced hotdogs.</li>
+            <li>Step 5: Add banana ketchup. Bring to a boil and let simmer for 15 minutes.</li>
+            <li>Step 6: Serve over cooked noodles and add optional cheddar cheese.</li>
+        </ul>
+        </div>
 </body>
 </html>
